<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.hm.achievement</groupId>
    <artifactId>advanced-achievements</artifactId>
    <version>${revision}</version>
    <url>https://github.com/mrfdev/advanced-achievements/</url>
    <name>AdvancedAchievements</name>
    <description>A Minecraft plugin that brings unique and challenging achievements on your server! Books, GUI,
        rankings, rewards, effects and more!
    </description>
    <issueManagement>
        <system>GitHub Issues</system>
        <url>https://github.com/mrfdev/advanced-achievements/issues</url>
    </issueManagement>
    <packaging>pom</packaging>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>21</java.version>
        <revision>7.3.0</revision>
        <!--<maven.test.skip>true</maven.test.skip>!-->
    </properties>

    <modules>
        <module>advanced-achievements-plugin</module>
        <module>advanced-achievements-api</module>
    </modules>

    <build>
        <plugins>
            <plugin>
                <groupId>net.revelc.code.formatter</groupId>
                <artifactId>formatter-maven-plugin</artifactId>
                <version>2.26.0</version>
                <configuration>
                    <configFile>${project.basedir}/../formatter-config.xml</configFile>
                    <compilerSource>${java.version}</compilerSource>
                    <compilerCompliance>${java.version}</compilerCompliance>
                    <compilerTargetPlatform>${java.version}</compilerTargetPlatform>
                    <lineEnding>KEEP</lineEnding>
                </configuration>
            </plugin>
        </plugins>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.14.0</version>
                    <configuration>
                        <compilerArgs>
                            <arg>-Xlint:deprecation</arg>
                            <arg>-Xlint:-options</arg>
                            <args>-Xdiags:verbose</args>
                        </compilerArgs>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-shade-plugin</artifactId>
                    <version>3.6.0</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.5.2</version>
                    <configuration>
                        <argLine>
                            -javaagent:${settings.localRepository}/org/mockito/mockito-core/5.16.1/mockito-core-5.16.1.jar
                            -Xshare:off
                        </argLine>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <repositories>
        <repository>
            <id>essentials-repo</id>
            <url>https://repo.essentialsx.net/releases/</url>
        </repository>
        <repository>
            <id>placeholderapi-repo</id>
            <url>https://repo.extendedclip.com/releases</url>
        </repository>
        <repository>
            <id>jitpack-repo</id>
            <url>https://jitpack.io</url>
        </repository>
        <repository>
            <id>papermc</id>
            <url>https://repo.papermc.io/repository/maven-public/</url>
        </repository>
    </repositories>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.hm.achievement</groupId>
                <artifactId>advanced-achievements-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.dagger</groupId>
                <artifactId>dagger</artifactId>
                <version>2.56</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>3.17.0</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-text</artifactId>
                <version>1.13.0</version>
            </dependency>
            <dependency>
                <groupId>io.papermc.paper</groupId>
                <artifactId>paper-api</artifactId>
                <version>1.21.5-R0.1-SNAPSHOT</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>com.github.MilkBowl</groupId>
                <artifactId>VaultAPI</artifactId>
                <version>-9520d8847e-1</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>com.github.pyvesb</groupId>
                <artifactId>petmaster</artifactId>
                <version>1.12.4</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>com.github.Zrips</groupId>
                <artifactId>Jobs</artifactId>
                <version>v5.2.2.3</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>net.essentialsx</groupId>
                <artifactId>EssentialsX</artifactId>
                <version>2.20.1</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>me.clip</groupId>
                <artifactId>placeholderapi</artifactId>
                <version>2.11.6</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>org.postgresql</groupId>
                <artifactId>postgresql</artifactId>
                <version>42.7.5</version>
            </dependency>
            <dependency>
                <groupId>com.h2database</groupId>
                <artifactId>h2</artifactId>
                <version>2.3.232</version>
            </dependency>

            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter</artifactId>
                <version>5.13.0-M1</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-junit-jupiter</artifactId>
                <version>5.16.1</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>
</project>
